--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Enemies\EnemyMove.cs" />
      <Compile Include="Assets\Scripts\Region\FOVSquare.cs" />
      <Compile Include="Assets\Scripts\Region\R_Camera.cs" />
      <Compile Include="Assets\Scripts\Region\R_FOV.cs" />
@@ -61,6 +62,7 @@
      <Compile Include="Assets\Scripts\Utility\SerializedPoint.cs" />
      <Compile Include="Assets\Scripts\Utility\Texturizer.cs" />
      <Compile Include="Assets\Scripts\Utility\TimerCallback.cs" />
+     <Compile Include="Assets\Scripts\Utility\TurnManager.cs" />
      <Compile Include="Assets\Scripts\Utility\UColor.cs" />
      <Compile Include="Assets\Scripts\WaterRipple.cs" />
      <None Include="Assets\Resources\Effects\Shaders\Add_Alpha8.shader" />
