--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,7 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CameraShake.cs" />
      <Compile Include="Assets\Scripts\Enemies\EnemyMove.cs" />
+     <Compile Include="Assets\Scripts\LightFlicker.cs" />
      <Compile Include="Assets\Scripts\Region\FOVSquare.cs" />
      <Compile Include="Assets\Scripts\Region\R_Camera.cs" />
      <Compile Include="Assets\Scripts\Region\R_FOV.cs" />
@@ -54,16 +56,14 @@
      <Compile Include="Assets\Scripts\Region\R_Player.cs" />
      <Compile Include="Assets\Scripts\Region\R_Reward.cs" />
      <Compile Include="Assets\Scripts\TextureScroller.cs" />
-     <Compile Include="Assets\Scripts\Utility\CameraShake.cs" />
+     <Compile Include="Assets\Scripts\UColor.cs" />
      <Compile Include="Assets\Scripts\Utility\Deck.cs" />
      <Compile Include="Assets\Scripts\Utility\HiveMind.cs" />
-     <Compile Include="Assets\Scripts\Utility\LightFlicker.cs" />
      <Compile Include="Assets\Scripts\Utility\RandomSeed.cs" />
      <Compile Include="Assets\Scripts\Utility\SerializedPoint.cs" />
      <Compile Include="Assets\Scripts\Utility\Texturizer.cs" />
      <Compile Include="Assets\Scripts\Utility\TimerCallback.cs" />
      <Compile Include="Assets\Scripts\Utility\TurnManager.cs" />
-     <Compile Include="Assets\Scripts\Utility\UColor.cs" />
      <Compile Include="Assets\Scripts\WaterRipple.cs" />
      <None Include="Assets\Resources\Effects\Shaders\Add_Alpha8.shader" />
  <Reference Include="UnityEngine.UI">
