HOLYSHITWTFBBQ COMBAT!!! Player and enemy move around board and do 10 damage on contact with each other.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\Mover.cs" />
      <Compile Include="Assets\Scripts\PlaySingleSound.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
+     <Compile Include="Assets\Scripts\PopupText.cs" />
      <Compile Include="Assets\Scripts\Region\FOVSquare.cs" />
      <Compile Include="Assets\Scripts\Region\R_Camera.cs" />
      <Compile Include="Assets\Scripts\Region\R_FOV.cs" />
