--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Enemies\EnemyMove.cs" />
      <Compile Include="Assets\Scripts\Enemies\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Pickable.cs" />
+     <Compile Include="Assets\Scripts\Picker.cs" />
      <Compile Include="Assets\Scripts\PlaySingleSound.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\Region\FOVSquare.cs" />
@@ -65,6 +66,7 @@
      <Compile Include="Assets\Scripts\Region\R_Map.cs" />
      <Compile Include="Assets\Scripts\Region\R_Player.cs" />
      <Compile Include="Assets\Scripts\Region\R_Reward.cs" />
+     <Compile Include="Assets\Scripts\RoguelikeControls.cs" />
      <Compile Include="Assets\Scripts\UI\FadeScrollTextUI.cs" />
      <Compile Include="Assets\Scripts\UI\LogUI.cs" />
      <Compile Include="Assets\Scripts\UI\PopupText.cs" />
