--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -53,13 +53,14 @@
      <Compile Include="Assets\Scripts\Effects\TextureScroller.cs" />
      <Compile Include="Assets\Scripts\Effects\UColor.cs" />
      <Compile Include="Assets\Scripts\Effects\WaterRipple.cs" />
-     <Compile Include="Assets\Scripts\Enemies\EnemyHealth.cs" />
-     <Compile Include="Assets\Scripts\Enemies\EnemyMove.cs" />
-     <Compile Include="Assets\Scripts\Enemies\EnemySpawner.cs" />
+     <Compile Include="Assets\Scripts\HealingItem.cs" />
      <Compile Include="Assets\Scripts\Pickable.cs" />
      <Compile Include="Assets\Scripts\Picker.cs" />
      <Compile Include="Assets\Scripts\PlaySingleSound.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
+     <Compile Include="Assets\Scripts\Region\Enemies\EnemyHealth.cs" />
+     <Compile Include="Assets\Scripts\Region\Enemies\EnemyMove.cs" />
+     <Compile Include="Assets\Scripts\Region\Enemies\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Region\FOVSquare.cs" />
      <Compile Include="Assets\Scripts\Region\R_Camera.cs" />
      <Compile Include="Assets\Scripts\Region\R_FOV.cs" />
