--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
      <Compile Include="Assets\Scripts\Spells\Spells.cs" />
      <Compile Include="Assets\Scripts\Spells\Targeter.cs" />
      <Compile Include="Assets\Scripts\UI\ContainerUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Equip Screen\EquipUI.cs" />
      <Compile Include="Assets\Scripts\UI\Equip Screen\EquippedGemButton.cs" />
      <Compile Include="Assets\Scripts\UI\Equip Screen\InventoryGemButton.cs" />
      <Compile Include="Assets\Scripts\UI\Equip Screen\StatTotalDisplay.cs" />
