--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
      <Compile Include="Assets\Scripts\Region\R_Map.cs" />
      <Compile Include="Assets\Scripts\Region\R_Player.cs" />
      <Compile Include="Assets\Scripts\Region\R_Reward.cs" />
+     <Compile Include="Assets\Scripts\Region\R_Stairs.cs" />
      <Compile Include="Assets\Scripts\RoguelikeControls.cs" />
      <Compile Include="Assets\Scripts\Spells\AOEBurst.cs" />
      <Compile Include="Assets\Scripts\Spells\Missile.cs" />
