--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -63,7 +63,7 @@
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\Region\Enemies\EnemyHealth.cs" />
      <Compile Include="Assets\Scripts\Region\Enemies\EnemyMove.cs" />
-     <Compile Include="Assets\Scripts\Region\Enemies\EnemySpawner.cs" />
+     <Compile Include="Assets\Scripts\Region\Enemies\MonsterMaker.cs" />
      <Compile Include="Assets\Scripts\Region\FOVSquare.cs" />
      <Compile Include="Assets\Scripts\Region\R_Camera.cs" />
      <Compile Include="Assets\Scripts\Region\R_FOV.cs" />
