--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\Effects\CameraShake.cs" />
      <Compile Include="Assets\Scripts\Effects\DestroyAfterTime.cs" />
      <Compile Include="Assets\Scripts\Effects\LightFlicker.cs" />
+     <Compile Include="Assets\Scripts\Effects\RandomSpriteColor.cs" />
      <Compile Include="Assets\Scripts\Effects\TextureScroller.cs" />
      <Compile Include="Assets\Scripts\Effects\UColor.cs" />
      <Compile Include="Assets\Scripts\Effects\WaterRipple.cs" />
