Chests are placed and give out loot. Fixed a bug with gem equip UI where the player inventory wasn't updating.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -79,6 +79,7 @@
      <Compile Include="Assets\Scripts\Spells\Missile.cs" />
      <Compile Include="Assets\Scripts\Spells\Spells.cs" />
      <Compile Include="Assets\Scripts\Spells\Targeter.cs" />
+     <Compile Include="Assets\Scripts\TreasureManager.cs" />
      <Compile Include="Assets\Scripts\UI\ContainerUI.cs" />
      <Compile Include="Assets\Scripts\UI\Equip Screen\EquipUI.cs" />
      <Compile Include="Assets\Scripts\UI\Equip Screen\EquippedGemButton.cs" />
