Level up reward screen.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -88,6 +88,7 @@
      <Compile Include="Assets\Scripts\UI\Equip Screen\StatTotalDisplay.cs" />
      <Compile Include="Assets\Scripts\UI\FadeScrollTextUI.cs" />
      <Compile Include="Assets\Scripts\UI\ItemButtonUI.cs" />
+     <Compile Include="Assets\Scripts\UI\LevelUpUI.cs" />
      <Compile Include="Assets\Scripts\UI\LogUI.cs" />
      <Compile Include="Assets\Scripts\UI\PauseMap.cs" />
      <Compile Include="Assets\Scripts\UI\PopupText.cs" />
